Removed the activation of the .cvw-sub-menu on hover above to avoid adverse affect on mobile.

--- a/style.css
+++ b/style.css
@@ -244,8 +244,7 @@ CAD Viewer Style Start
 	z-index: 9999;
 }
 
-.cm-item.active .cvw-sub-menu:after,
-.cm-item:hover .cvw-sub-menu:after {
+.cm-item.active .cvw-sub-menu:after {
 	content: "";
 	position: absolute;
 	top: 99%;
@@ -261,11 +260,34 @@ CAD Viewer Style Start
 	background-repeat: no-repeat;
 	background-size: cover;
 }
-.cm-item.active .cvw-sub-menu,
-.cm-item:hover .cvw-sub-menu {
+.cm-item.active .cvw-sub-menu {
 	display: flex;
 	justify-content: center;
 }
+
+/* Removed the activation of the .cvw-sub-menu on hover above to avoid adverse affect on mobile. Below is the CSS that includes previously included hover. JG */
+/* .cm-item.active .cvw-sub-menu:after,
+.cm-item:hover .cvw-sub-menu:after {
+	content: "";
+	position: absolute;
+	top: 99%;
+	height: 4.2em;
+	border-radius: 0 0 30px 30px;
+	left: 0;
+	right: 0;
+	width: 6.6em;
+	z-index: 0;
+	margin: auto;
+	background-image: url(images/menu_horizontal_bottom.svg);
+	background-position: center top;
+	background-repeat: no-repeat;
+	background-size: cover;
+} */
+/* .cm-item.active .cvw-sub-menu,
+.cm-item:hover .cvw-sub-menu {
+	display: flex;
+	justify-content: center;
+} */
 
 .cvw-sub-menu-scroll-wrap {
 	display: flex;
@@ -702,8 +724,12 @@ CAD Viewer Style Start
 
 .sk-wave-rect {
 	background-color: var(--sk-color);
-	background: rgb(0,51,77);
-background: linear-gradient(180deg, rgba(0,51,77,1) 0%, rgba(45,116,171,1) 100%);
+	background: rgb(0, 51, 77);
+	background: linear-gradient(
+		180deg,
+		rgba(0, 51, 77, 1) 0%,
+		rgba(45, 116, 171, 1) 100%
+	);
 	height: 100%;
 	width: 15%;
 	animation: sk-wave 1.2s infinite ease-in-out;
@@ -736,8 +762,6 @@ background: linear-gradient(180deg, rgba(0,51,77,1) 0%, rgba(45,116,171,1) 100%)
 	}
 }
 
-
-
 .loading-bar {
 	display: flex;
 	height: 5px;
@@ -747,34 +771,36 @@ background: linear-gradient(180deg, rgba(0,51,77,1) 0%, rgba(45,116,171,1) 100%)
 	overflow: hidden;
 	justify-content: space-between;
 	align-self: center;
-	margin-top: .5rem;
-	background-color:rgb(223, 230, 236, .5);
+	margin-top: 0.5rem;
+	background-color: rgb(223, 230, 236, 0.5);
 }
 @keyframes progress-animation {
 	0% {
 		width: 0%;
-	
- }
+	}
 	20% {
 		width: 10%;
- }
+	}
 	40% {
 		width: 30%;
- }
+	}
 	50% {
 		width: 60%;
- }
+	}
 	100% {
 		width: 100%;
-	
- }
+	}
 }
 .loading-bar .progress-bar {
 	/* display: flex; */
 	height: 100%;
 	width: 100%;
-	background-color:var(--sk-color);
-	background: rgb(0,51,77);
-	background: linear-gradient(90deg, rgba(0,51,77,1) 0%, rgba(45,116,171,1) 100%);
+	background-color: var(--sk-color);
+	background: rgb(0, 51, 77);
+	background: linear-gradient(
+		90deg,
+		rgba(0, 51, 77, 1) 0%,
+		rgba(45, 116, 171, 1) 100%
+	);
 	animation: progress-animation 5s ease-in-out;
 }
